@@ -1,5 +1,6 @@
 package com.dusk.module.workflow.service.impl;
 
+import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.io.IoUtil;
 import cn.hutool.core.util.ArrayUtil;
 import cn.hutool.core.util.NumberUtil;
@@ -17,7 +18,7 @@ import com.dusk.common.rpc.auth.dto.UserFullListDto;
 import com.dusk.common.rpc.auth.enums.ToDoTargetType;
 import com.dusk.common.rpc.auth.service.ITodoRpcService;
 import com.dusk.common.rpc.auth.service.IUserRpcService;
-import com.dusk.module.workflow.constant.ActivitiConstants;
+import com.dusk.module.workflow.constant.FlowableConstants;
 import com.dusk.module.workflow.dto.*;
 import com.dusk.module.workflow.mapper.WorkflowMapper;
 import com.dusk.module.workflow.service.IWorkflowService;
@@ -25,37 +26,61 @@ import com.dusk.workflow.dto.*;
 import com.dusk.workflow.enums.AssigneeTypeEnum;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.annotation.Resource;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.activiti.bpmn.model.BpmnModel;
-import org.activiti.engine.*;
-import org.activiti.engine.delegate.Expression;
-import org.activiti.engine.form.FormProperty;
-import org.activiti.engine.form.TaskFormData;
-import org.activiti.engine.history.HistoricActivityInstance;
-import org.activiti.engine.history.HistoricProcessInstance;
-import org.activiti.engine.history.HistoricTaskInstance;
-import org.activiti.engine.history.HistoricVariableInstance;
-import org.activiti.engine.impl.RepositoryServiceImpl;
-import org.activiti.engine.impl.bpmn.behavior.UserTaskActivityBehavior;
-import org.activiti.engine.impl.form.DefaultStartFormHandler;
-import org.activiti.engine.impl.javax.el.ExpressionFactory;
-import org.activiti.engine.impl.javax.el.ValueExpression;
-import org.activiti.engine.impl.juel.ExpressionFactoryImpl;
-import org.activiti.engine.impl.juel.SimpleContext;
-import org.activiti.engine.impl.persistence.entity.ExecutionEntity;
-import org.activiti.engine.impl.persistence.entity.ProcessDefinitionEntity;
-import org.activiti.engine.impl.pvm.PvmActivity;
-import org.activiti.engine.impl.pvm.PvmTransition;
-import org.activiti.engine.impl.pvm.process.ActivityImpl;
-import org.activiti.engine.impl.pvm.process.TransitionImpl;
-import org.activiti.engine.impl.task.TaskDefinition;
-import org.activiti.engine.repository.ProcessDefinition;
-import org.activiti.engine.runtime.ProcessInstance;
-import org.activiti.engine.task.*;
-import org.activiti.image.ProcessDiagramGenerator;
+//import org.activiti.bpmn.model.BpmnModel;
+//import org.activiti.engine.*;
+//import org.activiti.engine.delegate.Expression;
+//import org.activiti.engine.form.FormProperty;
+//import org.activiti.engine.form.TaskFormData;
+//import org.activiti.engine.history.HistoricActivityInstance;
+//import org.activiti.engine.history.HistoricProcessInstance;
+//import org.activiti.engine.history.HistoricTaskInstance;
+//import org.activiti.engine.history.HistoricVariableInstance;
+//import org.activiti.engine.impl.RepositoryServiceImpl;
+//import org.activiti.engine.impl.bpmn.behavior.UserTaskActivityBehavior;
+//import org.activiti.engine.impl.form.DefaultStartFormHandler;
+//import org.activiti.engine.impl.javax.el.ExpressionFactory;
+//import org.activiti.engine.impl.javax.el.ValueExpression;
+//import org.activiti.engine.impl.juel.ExpressionFactoryImpl;
+//import org.activiti.engine.impl.juel.SimpleContext;
+//import org.activiti.engine.impl.persistence.entity.ExecutionEntity;
+//import org.activiti.engine.impl.persistence.entity.ProcessDefinitionEntity;
+//import org.activiti.engine.impl.pvm.PvmActivity;
+//import org.activiti.engine.impl.pvm.PvmTransition;
+//import org.activiti.engine.impl.pvm.process.ActivityImpl;
+//import org.activiti.engine.impl.pvm.process.TransitionImpl;
+//import org.activiti.engine.impl.task.TaskDefinition;
+//import org.activiti.engine.repository.ProcessDefinition;
+//import org.activiti.engine.runtime.ProcessInstance;
+//import org.activiti.engine.task.*;
+//import org.activiti.image.ProcessDiagramGenerator;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.dubbo.config.annotation.DubboReference;
+import org.flowable.bpmn.model.*;
+import org.flowable.common.engine.impl.de.odysseus.el.ExpressionFactoryImpl;
+import org.flowable.common.engine.impl.de.odysseus.el.util.SimpleContext;
+import org.flowable.common.engine.impl.javax.el.ExpressionFactory;
+import org.flowable.common.engine.impl.javax.el.ValueExpression;
+import org.flowable.engine.*;
+import org.flowable.engine.form.FormProperty;
+import org.flowable.engine.form.TaskFormData;
+import org.flowable.engine.history.HistoricActivityInstance;
+import org.flowable.engine.history.HistoricProcessInstance;
+import org.flowable.engine.impl.RepositoryServiceImpl;
+import org.flowable.engine.impl.persistence.entity.ExecutionEntity;
+import org.flowable.engine.impl.persistence.entity.ProcessDefinitionEntity;
+import org.flowable.engine.repository.ProcessDefinition;
+import org.flowable.engine.runtime.ProcessInstance;
+import org.flowable.engine.task.Comment;
+import org.flowable.identitylink.api.IdentityLink;
+import org.flowable.identitylink.api.IdentityLinkType;
+import org.flowable.image.ProcessDiagramGenerator;
+import org.flowable.task.api.Task;
+import org.flowable.task.api.TaskInfo;
+import org.flowable.task.api.history.HistoricTaskInstance;
+import org.flowable.variable.api.history.HistoricVariableInstance;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -78,27 +103,27 @@ public class WorkflowServiceImpl implements IWorkflowService {
     private static final String BOHUI = "驳回";
     private static final String CHEHUI = "撤回";
     private final WorkflowMapper mapper = WorkflowMapper.INSTANCE;
-    @Autowired
+    @Autowired(required = false)
     private RuntimeService runtimeService;
-    @Autowired
+    @Autowired(required = false)
     private TaskService taskService;
-    @Autowired
+    @Autowired(required = false)
     private RepositoryService repositoryService;
-    @Autowired
+    @Autowired(required = false)
     private ProcessEngineConfiguration processEngineConfiguration;
-    @Autowired
+    @Autowired(required = false)
     private HistoryService historyService;
-    @Autowired
+    @Autowired(required = false)
     private FormService formService;
     @DubboReference(timeout = 1500)
     private IUserRpcService userRpcService;
-    @Autowired
+    @Resource
     private SecurityUtils securityUtils;
-    @Autowired
+    @Resource
     private UserNameUtils userNameUtils;
     @DubboReference
     private ITodoRpcService todoRpcService;
-    @Autowired
+    @Resource
     private ObjectMapper objectMapper;
 
     @Override
@@ -145,7 +170,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
         String procDefId = processInstance.getProcessDefinitionId();
 
         // 当前活动节点、活动线
-        List<String> activeActivityIds = new ArrayList<>(), highLightedFlows;
+        List<String> activeActivityIds, highLightedFlows;
 
         // 获得历史活动记录实体
         List<HistoricActivityInstance> historicActivityInstances =
@@ -155,8 +180,8 @@ public class WorkflowServiceImpl implements IWorkflowService {
         // 获得当前活动的节点
         if (isFinished(processInstanceId)) {
             // 如果流程已经结束，则得到结束节点
-            // activeActivityIds = historicActivityInstances.stream().map(HistoricActivityInstance::getActivityId)
-            // .collect(Collectors.toList());
+             activeActivityIds = historicActivityInstances.stream().map(HistoricActivityInstance::getActivityId)
+             .collect(Collectors.toList());
 
         } else {
             // 如果流程没有结束，则取当前活动节点
@@ -185,7 +210,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
         String annotationFontName = processEngineConfiguration.getAnnotationFontName();
         InputStream is = diagramGenerator.generateDiagram(bpmnModel, "png", activeActivityIds, highLightedFlows,
                 activityFontName, labelFontName, annotationFontName,
-                processEngineConfiguration.getClassLoader(), 1.0);
+                processEngineConfiguration.getClassLoader(), 1.0, true);
         return IoUtil.readBytes(is);
     }
 
@@ -202,18 +227,18 @@ public class WorkflowServiceImpl implements IWorkflowService {
     public List<ProcessDesOutPutDto> getProcessDescription(List<String> processIds) {
         List<ProcessDesOutPutDto> data = new ArrayList<>();
         List<UserNameDto> all = new ArrayList<>();
-        if (processIds != null && processIds.size() > 0) {
+        if (processIds != null && !processIds.isEmpty()) {
             UserContext currentUser = securityUtils.getCurrentUser();
             UserFullListDto userInfo = currentUser == null ? null : userRpcService.getUserFullById(currentUser.getId());
             List<Task> collect = new ArrayList<>(taskService.createTaskQuery().processInstanceIdIn(processIds).list());
             for (String processId : processIds) {
                 ProcessDesOutPutDto dto = new ProcessDesOutPutDto();
                 dto.setProcessInstanceId(processId);
-                List<Task> relatedTask = collect.stream().filter(p -> p.getProcessInstanceId().equals(processId)).collect(toList());
+                List<Task> relatedTask = collect.stream().filter(p -> p.getProcessInstanceId().equals(processId)).toList();
                 if (!relatedTask.isEmpty()) {
                     Map<String, Object> variables = runtimeService.getVariables(processId);
                     dto.setVariables(variables);
-                    List<String> assignees = relatedTask.stream().filter(e -> StrUtil.isNotEmpty(e.getAssignee())).map(TaskInfo::getAssignee).collect(toList());
+                    List<String> assignees = relatedTask.stream().map(TaskInfo::getAssignee).filter(StrUtil::isNotEmpty).collect(toList());
                     assignees.forEach(p -> {
                         for (String assignee : p.split(",")) {//兼容处理指定多用户的情况
                             UserNameDto nameDto = new UserNameDto();
@@ -226,9 +251,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
                             all.add(nameDto);
                         }
                     });
-                    relatedTask.forEach(p -> {
-                        assignees.addAll(getFormKeyAssignee(p.getFormKey()));
-                    });
+                    relatedTask.forEach(p -> assignees.addAll(getFormKeyAssignee(p.getFormKey())));
                     dto.setHasPermission(userInfo != null && hasTaskPermission(assignees, userInfo));
                     String taskName = ArrayUtil.join(relatedTask.stream().map(TaskInfo::getName).distinct().toList().toArray(), "/");
                     dto.setTaskName(taskName);
@@ -243,7 +266,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
             List<UserNameDto> userNameDtos = userNameUtils.mapList(all, UserNameDto.class);
             for (ProcessDesOutPutDto item : data) {
                 if (!item.isFinished()) {
-                    List<String> temp = userNameDtos.stream().filter(p -> p.getProcessInstanceId().equals(item.getProcessInstanceId())).map(p -> p.getAssigneeName())
+                    List<String> temp = userNameDtos.stream().filter(p -> p.getProcessInstanceId().equals(item.getProcessInstanceId())).map(UserNameDto::getAssigneeName)
                             .toList();
                     if (!temp.isEmpty()) {
                         item.setDescription(StrUtil.format("待【{}】{}", ArrayUtil.join(temp.stream().distinct().toArray(), "，"), item.getTaskName()));
@@ -282,7 +305,8 @@ public class WorkflowServiceImpl implements IWorkflowService {
         }
 
         if (processDefinition.getHasStartFormKey()) {
-            return ((DefaultStartFormHandler) processDefinition.getStartFormHandler()).getFormKey().getExpressionText();
+            //return ((DefaultStartFormHandler) processDefinition.getStartFormHandler()).getFormKey().getExpressionText();
+            formService.getStartFormKey(processDefinition.getId());
         }
         return null;
     }
@@ -378,7 +402,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
 
     @Override
     public WorkflowTaskDto getNextTask(String taskId, Map<String, Object> variables) {
-        TaskDefinition task = null;
+        UserTask task = null;
 
         Task taskInstance = taskService.createTaskQuery().taskId(taskId).singleResult();
         ProcessInstance processInstance =
@@ -391,7 +415,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
         try {
             processVariables = runtimeService.getVariables(taskInstance.getExecutionId());
         } catch (Exception e) {
-            e.printStackTrace();
+            log.error(e.getMessage());
         }
 
         ProcessDefinitionEntity processDefinitionEntity =
@@ -402,17 +426,23 @@ public class WorkflowServiceImpl implements IWorkflowService {
         //当前流程节点Id信息
         String activitiId = execution.getActivityId();
 
-        //获取流程所有节点信息
-        List<ActivityImpl> activitiList = processDefinitionEntity.getActivities();
+        ////获取流程所有节点信息
+        //List<ActivityImpl> activitiList = processDefinitionEntity.getActivities();
+        //
+        ////遍历所有节点信息
+        //for (ActivityImpl activityImpl : activitiList) {
+        //    String id = activityImpl.getId();
+        //    if (activitiId.equals(id)) {
+        //        //获取下一个节点信息
+        //        task = nextTaskDefinition(activityImpl, activityImpl.getId(), variables);
+        //        break;
+        //    }
+        //}
 
-        //遍历所有节点信息
-        for (ActivityImpl activityImpl : activitiList) {
-            String id = activityImpl.getId();
-            if (activitiId.equals(id)) {
-                //获取下一个节点信息
-                task = nextTaskDefinition(activityImpl, activityImpl.getId(), variables);
-                break;
-            }
+        BpmnModel bpmnModel = repositoryService.getBpmnModel(definitionId);
+        FlowElement flowElement = bpmnModel.getFlowElement(activitiId);
+        if (flowElement instanceof FlowNode) {
+            task = nextTaskDefinition(flowElement, activitiId, variables);
         }
 
         if (task != null) {
@@ -460,21 +490,11 @@ public class WorkflowServiceImpl implements IWorkflowService {
         String activityId = execution.getActivityId();
 
         //获取流程所有节点信息
-        List<ActivityImpl> activityList = processDefinitionEntity.getActivities();
-
-        //遍历所有节点信息
-        for (ActivityImpl activityImpl : activityList) {
-            String id = activityImpl.getId();
-            if (activityId.equals(id)) {
-                for (HistoricActivityInstance historicActivityInstance : historicActivityInstanceList) {
-                    if (activityId.equals(historicActivityInstance.getActivityId())) {
-                        break;
-                    }
-                }
-                List<PvmTransition> outgoingTransitions = activityImpl.getOutgoingTransitions();
-                caculateLinkTask(outgoingTransitions, taskList, processVariables, autoCalculate, null);
-                break;
-            }
+        BpmnModel bpmnModel = repositoryService.getBpmnModel(execution.getProcessDefinitionId());
+        FlowElement flowElement = bpmnModel.getFlowElement(activityId);
+        if (flowElement instanceof UserTask userTask) {
+            List<SequenceFlow> outgoingFlows = userTask.getOutgoingFlows();
+            caculateLinkTask(outgoingFlows, taskList, processVariables, autoCalculate, null);
         }
 
         return taskList;
@@ -489,7 +509,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
                 String processDefinitionFirstFormKey = getProcessDefinitionFirstFormKey(processKey);
                 RelatedNodeInfo startEvent = new RelatedNodeInfo();
                 startEvent.setFormKey(processDefinitionFirstFormKey);
-                startEvent.setNodeType(ActivitiConstants.NODE_TYPE_START_EVENT);
+                startEvent.setNodeType(FlowableConstants.NODE_TYPE_START_EVENT);
                 nodeList.add(startEvent);
             } else {
                 throw new BusinessException("taskId和processKey两者不能同时为空");
@@ -529,22 +549,20 @@ public class WorkflowServiceImpl implements IWorkflowService {
             //当前流程节点Id信息
             String activityId = execution.getActivityId();
 
-            //获取流程所有节点信息
-            List<ActivityImpl> activityList = processDefinitionEntity.getActivities();
+            // 1. 获取 BpmnModel (推荐缓存此对象或从 RepositoryService 获取)
+            BpmnModel bpmnModel = repositoryService.getBpmnModel(processDefinitionEntity.getId());
 
-            //遍历所有节点信息
-            for (ActivityImpl activityImpl : activityList) {
-                String id = activityImpl.getId();
-                if (activityId.equals(id)) {
-                    for (HistoricActivityInstance historicActivityInstance : historicActivityInstanceList) {
-                        if (activityId.equals(historicActivityInstance.getActivityId())) {
-                            break;
-                        }
-                    }
-                    List<PvmTransition> outgoingTransitions = activityImpl.getOutgoingTransitions();
-                    caculateLinkNode(outgoingTransitions, nodeList, processVariables, autoCalculate, null);
-                    break;
-                }
+            // 2. 直接根据 ID 获取节点，无需手动循环遍历所有 Activities
+            FlowElement flowElement = bpmnModel.getFlowElement(activityId);
+
+            // 3. 如果节点存在且属于流转节点 (FlowNode)
+            if (flowElement instanceof FlowNode flowNode) {
+                // 获取出线
+                List<SequenceFlow> outgoingFlows = flowNode.getOutgoingFlows();
+
+                // 执行你的计算逻辑
+                // 注意：你需要将 caculateLinkNode 方法的第一个参数类型改为 List<SequenceFlow>
+                caculateLinkNode(outgoingFlows, nodeList, processVariables, autoCalculate, null);
             }
         }
         return nodeList;
@@ -612,23 +630,53 @@ public class WorkflowServiceImpl implements IWorkflowService {
         List<HistoricTaskInstance> historicTaskInstanceDesc = getHistoricTaskInstanceDesc(processInstanceId);
         ProcessDefinitionEntity processDefinitionEntity = getProcessDefinitionEntity(processInstanceId);
         List<Task> userTasks = taskService.createTaskQuery().processInstanceId(processInstanceId).list();
-        return checkProcessCanRecallPre(historicTaskInstanceDesc, processDefinitionEntity, userTasks);
+        return checkProcessCanRecallPre(historicTaskInstanceDesc, processDefinitionEntity.getId(), userTasks);
     }
+
+    ///**
+    // * 驳回至上一节点
+    // * @param processInstanceId
+    // */
+    //@Override
+    //public void recallPre(String processInstanceId) {
+    //    List<HistoricTaskInstance> historicTaskInstanceDesc = getHistoricTaskInstanceDesc(processInstanceId);
+    //    ProcessDefinitionEntity processDefinitionEntity = getProcessDefinitionEntity(processInstanceId);
+    //    List<Task> userTasks = taskService.createTaskQuery().processInstanceId(processInstanceId).list();
+    //    if (!checkProcessCanRecallPre(historicTaskInstanceDesc, processDefinitionEntity, userTasks)) {
+    //        throw new BusinessException("当前节点无法撤回");
+    //    }
+    //    ActivityImpl gotoActivity = processDefinitionEntity.findActivity(historicTaskInstanceDesc.getFirst().getTaskDefinitionKey());
+    //    ActivityImpl currActivity = processDefinitionEntity.findActivity(userTasks.getFirst().getTaskDefinitionKey());
+    //    gotoAssignActivity(userTasks.getFirst(), currActivity, gotoActivity, CHEHUI);
+    //    //删除历史记录
+    //    historyService.deleteHistoricTaskInstance(historicTaskInstanceDesc.getFirst().getId());
+    //    historyService.deleteHistoricTaskInstance(userTasks.getFirst().getId());
+    //}
 
     @Override
     public void recallPre(String processInstanceId) {
+        // 1. 获取历史任务（按结束时间倒序）
         List<HistoricTaskInstance> historicTaskInstanceDesc = getHistoricTaskInstanceDesc(processInstanceId);
-        ProcessDefinitionEntity processDefinitionEntity = getProcessDefinitionEntity(processInstanceId);
+        // 2. 获取当前运行中的任务
         List<Task> userTasks = taskService.createTaskQuery().processInstanceId(processInstanceId).list();
-        if (!checkProcessCanRecallPre(historicTaskInstanceDesc, processDefinitionEntity, userTasks)) {
+
+        // 校验逻辑（内部应改为基于 ID 的判断）
+        if (!checkProcessCanRecallPre(historicTaskInstanceDesc, historicTaskInstanceDesc.getFirst().getProcessDefinitionId(), userTasks)) {
             throw new BusinessException("当前节点无法撤回");
         }
-        ActivityImpl gotoActivity = processDefinitionEntity.findActivity(historicTaskInstanceDesc.getFirst().getTaskDefinitionKey());
-        ActivityImpl currActivity = processDefinitionEntity.findActivity(userTasks.getFirst().getTaskDefinitionKey());
-        gotoAssignActivity(userTasks.getFirst(), currActivity, gotoActivity, CHEHUI);
-        //删除历史记录
+
+        String currActivityId = userTasks.getFirst().getTaskDefinitionKey();
+        String targetActivityId = historicTaskInstanceDesc.getFirst().getTaskDefinitionKey();
+
+        // 3. 执行跳转（撤回核心）
+        runtimeService.createChangeActivityStateBuilder()
+                .processInstanceId(processInstanceId)
+                .moveActivityIdTo(currActivityId, targetActivityId)
+                .changeState();
+
+        // 4. 删除意见或处理历史（Flowable 7 自动结束当前任务历史，无需手动删除运行中任务的历史）
         historyService.deleteHistoricTaskInstance(historicTaskInstanceDesc.getFirst().getId());
-        historyService.deleteHistoricTaskInstance(userTasks.getFirst().getId());
+        // 注意：currActivity 对应的历史任务在 changeState 时会被引擎自动更新/关闭
     }
 
 
@@ -669,19 +717,19 @@ public class WorkflowServiceImpl implements IWorkflowService {
         }
 
         if (StrUtil.isNotEmpty(input.getTitle())) {
-            variables.put(ActivitiConstants.TITLE, input.getTitle());
+            variables.put(FlowableConstants.TITLE, input.getTitle());
         }
         if (StrUtil.isNotEmpty(input.getTypeName())) {
-            variables.put(ActivitiConstants.TYPE_NAME, input.getTypeName());
+            variables.put(FlowableConstants.TYPE_NAME, input.getTypeName());
         }
         if (StrUtil.isNotEmpty(input.getType())) {
-            variables.put(ActivitiConstants.BUSINESS_TYPE, input.getType());
+            variables.put(FlowableConstants.BUSINESS_TYPE, input.getType());
         }
         if (input.getFilterStation() != null) {
-            variables.put(ActivitiConstants.FILTER_STATION, input.getFilterStation());
+            variables.put(FlowableConstants.FILTER_STATION, input.getFilterStation());
         }
         if (StrUtil.isNotEmpty(input.getStarter())) {
-            variables.put(ActivitiConstants.STARTER, input.getStarter());
+            variables.put(FlowableConstants.STARTER, input.getStarter());
         }
 
         input.setVariables(variables);
@@ -704,7 +752,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
         if (initAssignee) {
             for (Task task : tasks) {
                 String assignee = task.getAssignee();
-                if (ActivitiConstants.PLACE_HOLDER_DIRECT_LEADER.equals(assignee)) {
+                if (FlowableConstants.PLACE_HOLDER_DIRECT_LEADER.equals(assignee)) {
                     // rpc 获取直属上级， 如果获取不到 直接抛出异常
                     Long superiorId = userRpcService.getSuperiorId(LoginUserIdContextHolder.getUserId());
                     if (superiorId == null) {
@@ -737,33 +785,65 @@ public class WorkflowServiceImpl implements IWorkflowService {
 
         runtimeService.setVariables(input.getProcessInstanceId(), variables);
 
+        // 3. 获取 BPMN 模型解析代理人表达式
+        BpmnModel bpmnModel = repositoryService.getBpmnModel(processInstance.getProcessDefinitionId());
         List<Task> tasks = taskService.createTaskQuery().processInstanceId(input.getProcessInstanceId()).list();
-
         List<Task> updatedTasks = new ArrayList<>();
-
         Map<String, Object> currVariables = runtimeService.getVariables(input.getProcessInstanceId());
-        String definitionId = processInstance.getProcessDefinitionId();
-        ProcessDefinitionEntity processDefinitionEntity =
-                (ProcessDefinitionEntity) ((RepositoryServiceImpl) repositoryService).getDeployedProcessDefinition(definitionId);
+
         for (Task task : tasks) {
-            TaskDefinition taskDefinition = processDefinitionEntity.getTaskDefinitions().get(task.getTaskDefinitionKey());
-            if (taskDefinition != null && taskDefinition.getAssigneeExpression() != null) {
-                for (String key : variables.keySet()) {
-                    String assigneeExpression = taskDefinition.getAssigneeExpression().getExpressionText();
-                    if (StrUtil.isNotBlank(assigneeExpression) && assigneeExpression.contains("${" + key + "}")) {
-                        String assignee = getExpressionValue(assigneeExpression, currVariables);
-                        if (StrUtil.isBlank(assignee)) {
-                            throw new BusinessException("代理人不能为空");
+            // 通过 BpmnModel 获取 UserTask
+            FlowElement flowElement = bpmnModel.getFlowElement(task.getTaskDefinitionKey());
+            if (flowElement instanceof UserTask userTask) {
+                String assigneeExp = userTask.getAssignee(); // 获取原生的表达式字符串，如 ${manager}
+
+                if (StrUtil.isNotBlank(assigneeExp)) {
+                    for (String key : variables.keySet()) {
+                        // 只要表达式包含更新的 key，则重新解析
+                        if (assigneeExp.contains("${" + key + "}")) {
+                            String newAssignee = getExpressionValue(assigneeExp, currVariables);
+                            if (StrUtil.isBlank(newAssignee)) {
+                                throw new BusinessException("代理人不能为空");
+                            }
+                            // 4. 使用官方 API 变更代理人（saveTask 不推荐用于变更 assignee）
+                            taskService.setAssignee(task.getId(), newAssignee);
+                            task.setAssignee(newAssignee); // 同步内存对象用于后续 DTO 转换
+                            updatedTasks.add(task);
+                            break;
                         }
-                        //变更代理人
-                        task.setAssignee(assignee);
-                        taskService.saveTask(task);
-                        updatedTasks.add(task);
-                        break;
                     }
                 }
             }
         }
+
+
+        //List<Task> tasks = taskService.createTaskQuery().processInstanceId(input.getProcessInstanceId()).list();
+        //
+        //List<Task> updatedTasks = new ArrayList<>();
+        //
+        //Map<String, Object> currVariables = runtimeService.getVariables(input.getProcessInstanceId());
+        //String definitionId = processInstance.getProcessDefinitionId();
+        //ProcessDefinitionEntity processDefinitionEntity =
+        //        (ProcessDefinitionEntity) ((RepositoryServiceImpl) repositoryService).getDeployedProcessDefinition(definitionId);
+        //for (Task task : tasks) {
+        //    TaskDefinition taskDefinition = processDefinitionEntity.getTaskDefinitions().get(task.getTaskDefinitionKey());
+        //    if (taskDefinition != null && taskDefinition.getAssigneeExpression() != null) {
+        //        for (String key : variables.keySet()) {
+        //            String assigneeExpression = taskDefinition.getAssigneeExpression().getExpressionText();
+        //            if (StrUtil.isNotBlank(assigneeExpression) && assigneeExpression.contains("${" + key + "}")) {
+        //                String assignee = getExpressionValue(assigneeExpression, currVariables);
+        //                if (StrUtil.isBlank(assignee)) {
+        //                    throw new BusinessException("代理人不能为空");
+        //                }
+        //                //变更代理人
+        //                task.setAssignee(assignee);
+        //                taskService.saveTask(task);
+        //                updatedTasks.add(task);
+        //                break;
+        //            }
+        //        }
+        //    }
+        //}
         //更新待办
         if (!updatedTasks.isEmpty()) {
             syncTodosAssigneeChanged(processInstance, toTaskDto(updatedTasks, false), mapper.updateFlowVariablesInputToAppPushDto(input), input.getBusinessData());
@@ -776,7 +856,6 @@ public class WorkflowServiceImpl implements IWorkflowService {
      * 流程是否已经结束
      *
      * @param processInstanceId 流程实例ID
-     * @return
      */
     private boolean isFinished(String processInstanceId) {
         return historyService.createHistoricProcessInstanceQuery().finished().processInstanceId(processInstanceId).count() > 0;
@@ -794,60 +873,71 @@ public class WorkflowServiceImpl implements IWorkflowService {
         }
     }
 
-    private WorkflowTaskDto getWorkflowTaskDto(TaskDefinition task, Map<String, Object> processVariables) {
+    private WorkflowTaskDto getWorkflowTaskDto(UserTask userTask, Map<String, Object> processVariables) {
         WorkflowTaskDto workflowTaskDto = new WorkflowTaskDto();
-        workflowTaskDto.setName(task.getNameExpression() != null ?
-                getExpressionValue(task.getNameExpression().toString(), processVariables) : null);
-        workflowTaskDto.setDescription(task.getDescriptionExpression() != null ?
-                getExpressionValue(task.getDescriptionExpression().toString(), processVariables) : null);
-        workflowTaskDto.setAssignee(task.getAssigneeExpression() != null ?
-                getExpressionValue(task.getAssigneeExpression().toString(), processVariables) : null);
-        workflowTaskDto.setOwner(task.getOwnerExpression() != null ?
-                getExpressionValue(task.getOwnerExpression().toString(), processVariables) : null);
-        workflowTaskDto.setFormKey(task.getFormKeyExpression() != null ?
-                getExpressionValue(task.getFormKeyExpression().toString(), processVariables) : null);
+
+        // 1. 基础属性获取（v7 中 getDocumentation 对应描述）
+        workflowTaskDto.setName(resolve(userTask.getName(), processVariables));
+        workflowTaskDto.setDescription(resolve(userTask.getDocumentation(), processVariables));
+        workflowTaskDto.setAssignee(resolve(userTask.getAssignee(), processVariables));
+        workflowTaskDto.setOwner(resolve(userTask.getOwner(), processVariables));
+        workflowTaskDto.setFormKey(resolve(userTask.getFormKey(), processVariables));
+
         List<WorkflowIdentityLinkDto> identityLinks = new ArrayList<>();
 
-        if (task.getCandidateUserIdExpressions() != null) {
-            Set<Expression> candidateUserIdExpressions = task.getCandidateUserIdExpressions();
-            for (Expression expression : candidateUserIdExpressions) {
-                WorkflowIdentityLinkDto workflowIdentityLinkDto = new WorkflowIdentityLinkDto();
-                workflowIdentityLinkDto.setUserId(getExpressionValue(expression.toString(), processVariables));
-                workflowIdentityLinkDto.setType(IdentityLinkType.CANDIDATE);
-                identityLinks.add(workflowIdentityLinkDto);
+        // 2. 处理候选人 (CandidateUsers 现在是 List<String>)
+        if (CollUtil.isNotEmpty(userTask.getCandidateUsers())) {
+            for (String userExp : userTask.getCandidateUsers()) {
+                WorkflowIdentityLinkDto dto = new WorkflowIdentityLinkDto();
+                dto.setUserId(resolve(userExp, processVariables));
+                dto.setType(IdentityLinkType.CANDIDATE);
+                identityLinks.add(dto);
             }
         }
 
-        if (task.getCandidateGroupIdExpressions() != null) {
-            Set<Expression> candidateGroupIdExpressions = task.getCandidateGroupIdExpressions();
-            for (Expression expression : candidateGroupIdExpressions) {
-                WorkflowIdentityLinkDto workflowIdentityLinkDto = new WorkflowIdentityLinkDto();
-                workflowIdentityLinkDto.setGroupId(getExpressionValue(expression.toString(), processVariables));
-                workflowIdentityLinkDto.setType(IdentityLinkType.CANDIDATE);
-                identityLinks.add(workflowIdentityLinkDto);
+        // 3. 处理候选组 (CandidateGroups 现在是 List<String>)
+        if (CollUtil.isNotEmpty(userTask.getCandidateGroups())) {
+            for (String groupExp : userTask.getCandidateGroups()) {
+                WorkflowIdentityLinkDto dto = new WorkflowIdentityLinkDto();
+                dto.setGroupId(resolve(groupExp, processVariables));
+                dto.setType(IdentityLinkType.CANDIDATE);
+                identityLinks.add(dto);
             }
         }
+
         workflowTaskDto.setIdentityLinks(identityLinks);
         return workflowTaskDto;
     }
 
+    /** 辅助方法：统一处理 String 类型的表达式解析 */
+    private String resolve(String expression, Map<String, Object> vars) {
+        if (expression == null) return null;
+        // 调用你原有的表达式解析逻辑，或使用 Flowable 7 的 ManagementService 解析
+        return getExpressionValue(expression, vars);
+    }
 
-    private RelatedNodeInfo getWorkflowNodeDto(TaskDefinition task, Map<String, Object> processVariables) {
+
+    private RelatedNodeInfo getWorkflowNodeDto(UserTask userTask, Map<String, Object> processVariables) {
         RelatedNodeInfo nodeInfo = new RelatedNodeInfo();
-        nodeInfo.setNodeType(ActivitiConstants.NODE_TYPE_USER_TASK);
-        nodeInfo.setName(task.getNameExpression() != null ?
-                getExpressionValue(task.getNameExpression().toString(), processVariables) : null);
-        nodeInfo.setFormKey(task.getFormKeyExpression() != null ?
-                getExpressionValue(task.getFormKeyExpression().toString(), processVariables) : null);
+        // 1. 设置节点类型（建议使用 Flowable 7 自带常量或自定义常量）
+        nodeInfo.setNodeType("userTask");
+
+        // 2. 获取名称：v7 中 getName() 返回的是 String（可能是表达式字符串）
+        nodeInfo.setName(userTask.getName() != null ?
+                getExpressionValue(userTask.getName(), processVariables) : null);
+
+        // 3. 获取 FormKey：直接从 UserTask 对象获取 String 类型的 Key
+        nodeInfo.setFormKey(userTask.getFormKey() != null ?
+                getExpressionValue(userTask.getFormKey(), processVariables) : null);
+
         return nodeInfo;
     }
 
     /**
      * 根据表达式获取值
      *
-     * @param expression
-     * @param variables
-     * @return
+     * @param expression 表达式
+     * @param variables 变量
      */
     private String getExpressionValue(String expression, Map<String, Object> variables) {
         ExpressionFactory factory = new ExpressionFactoryImpl();
@@ -861,7 +951,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
             ValueExpression e = factory.createValueExpression(context, expression, String.class);
             return e.getValue(context).toString();
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.error(ex.getMessage());
             return expression;
         }
     }
@@ -869,77 +959,33 @@ public class WorkflowServiceImpl implements IWorkflowService {
     /**
      * 获取下一个任务节点
      *
-     * @param activityImpl 流程节点信息
-     * @param activityId   当前流程节点Id信息
+     * @param flowElement 流程节点信息
+     * @param currentActivityId   当前流程节点Id信息
      * @param variables    变量
-     * @return
      */
-    private TaskDefinition nextTaskDefinition(ActivityImpl activityImpl, String activityId,
-                                              Map<String, Object> variables) {
-
-        // 如果遍历节点为用户任务并且节点不是当前节点信息
-        if ("userTask".equals(activityImpl.getProperty("type")) && !activityId.equals(activityImpl.getId())) {
-            // 获取该节点下一个节点信息
-            return ((UserTaskActivityBehavior) activityImpl.getActivityBehavior()).getTaskDefinition();
-        } else {
-            // 获取节点所有流向线路信息
-            List<PvmTransition> outTransitions = activityImpl.getOutgoingTransitions();
-
-            //如果只有一个流向
-            if (outTransitions.size() == 1) {
-                PvmTransition pvmTransition = outTransitions.get(0);
-                PvmActivity destination = pvmTransition.getDestination();// 获取线路的终点节点
-                // 如果是userTask,返回下一个节点
-                if ("userTask".equals(destination.getProperty("type"))) {
-                    return ((UserTaskActivityBehavior) ((ActivityImpl) destination).getActivityBehavior()).getTaskDefinition();
-                } else if ("exclusiveGateway".equals(destination.getProperty("type"))) { // 如果是排他网关
-                    List<PvmTransition> outTransitionsTemp = destination.getOutgoingTransitions();
-                    // 如果排他网关只有一条线路信息
-                    if (outTransitionsTemp.size() == 1) {
-                        return nextTaskDefinition((ActivityImpl) outTransitionsTemp.getFirst().getDestination(),
-                                activityId, variables);
-                    } else if (outTransitionsTemp.size() > 1) { // 如果排他网关有多条线路信息
-                        for (PvmTransition outTransition : outTransitionsTemp) {
-                            Object conditionText = outTransition.getProperty("conditionText"); // 获取排他网关线路判断条件信息
-                            // 判断el表达式是否成立
-                            if (conditionText != null && variables != null && isCondition(StrUtil.trim(conditionText.toString()), variables)) {
-                                return nextTaskDefinition((ActivityImpl) outTransition.getDestination(), activityId,
-                                        variables);
-                            }
-                        }
-                    }
-                }
-            } else if (outTransitions.size() > 1) { // 如果有多个流向
-                for (PvmTransition outTransition : outTransitions) {
-                    Object conditionText = outTransition.getProperty("conditionText");
-                    // 判断el表达式是否成立
-                    if (conditionText != null && variables != null && isCondition(StrUtil.trim(conditionText.toString()), variables)) {
-                        return nextTaskDefinition((ActivityImpl) outTransition.getDestination(), activityId, variables);
-                    }
-                }
-            }
-            return null;
+    private UserTask nextTaskDefinition(FlowElement flowElement, String currentActivityId, Map<String, Object> variables) {
+        // 1. 如果当前节点是用户任务，且不是起点节点，则为目标节点
+        if (flowElement instanceof UserTask && !flowElement.getId().equals(currentActivityId)) {
+            return (UserTask) flowElement;
         }
-    }
 
-    private TaskDefinition getTaskDefinition(ProcessInstance processInstance, Task task) {
-        //获取流程发布Id信息
-        String definitionId = processInstance.getProcessDefinitionId();
-        ProcessDefinitionEntity processDefinitionEntity =
-                (ProcessDefinitionEntity) ((RepositoryServiceImpl) repositoryService).getDeployedProcessDefinition(definitionId);
-        //获取流程所有节点信息
-        List<ActivityImpl> activitiList = processDefinitionEntity.getActivities();
-        //遍历所有节点信息
-        for (ActivityImpl activityImpl : activitiList) {
-            if ("userTask".equals(activityImpl.getProperty("type"))) {
-                TaskDefinition taskDefinition = ((UserTaskActivityBehavior) activityImpl.getActivityBehavior()).getTaskDefinition();
-                if (taskDefinition.getKey().equals(task.getTaskDefinitionKey())) {
-                    return taskDefinition;
+        // 2. 如果是连线节点 (FlowNode)，处理其出线 (OutgoingFlows)
+        if (flowElement instanceof FlowNode) {
+            List<SequenceFlow> outgoingFlows = ((FlowNode) flowElement).getOutgoingFlows();
+
+            for (SequenceFlow sf : outgoingFlows) {
+                String condition = sf.getConditionExpression();
+                // 3. 评估连线条件（如果没有条件或满足 EL 表达式）
+                if (StrUtil.isEmpty(condition) || (variables != null && isCondition(condition, variables))) {
+                    FlowElement target = sf.getTargetFlowElement();
+                    UserTask found = nextTaskDefinition(target, currentActivityId, variables);
+                    if (found != null) return found;
                 }
             }
         }
         return null;
     }
+
 
     /**
      * 根据变量返回el表达式是否通过信息
@@ -961,64 +1007,57 @@ public class WorkflowServiceImpl implements IWorkflowService {
         try {
             flag = (Boolean) e.getValue(context);
         } catch (Exception ex) {
-            ex.printStackTrace();
+            log.error(ex.getMessage());
         }
         return flag;
     }
 
-    //计算关联节点
-    private void caculateLinkTask(List<PvmTransition> outgoingTransitions, List<WorkflowTaskDto> taskList, Map<String
-                                          , Object> processVariables, boolean autoCalculate,
-                                  String defaultFlowId) {
+    /**
+     * 计算关联节点
+     */
+    private void caculateLinkTask(List<SequenceFlow> outgoingFlows, List<WorkflowTaskDto> taskList,
+                                  Map<String, Object> processVariables, boolean autoCalculate, String defaultFlowId) {
         WorkflowTaskDto defaultWorkflow = null;
-        // 找到当前节点关联的节点
-        for (PvmTransition outgoingTransition : outgoingTransitions) {
-            ActivityImpl destination = (ActivityImpl) outgoingTransition.getDestination();
-            if ("userTask".equals(destination.getProperty("type"))) {
-                TaskDefinition taskDefinition = (TaskDefinition) destination.getProperty("taskDefinition");
-                WorkflowTaskDto workflowTaskDto = getWorkflowTaskDto(taskDefinition, processVariables);
 
-                Object flowName = outgoingTransition.getProperty("name");
-                //简单定义驳回
-                if (flowName != null && flowName.toString().contains(BOHUI)) {
-                    workflowTaskDto.setTaskDirection("from");
-                    taskList.add(workflowTaskDto);
+        for (SequenceFlow sf : outgoingFlows) {
+            FlowElement target = sf.getTargetFlowElement();
+
+            // 1. 处理用户任务节点
+            if (target instanceof UserTask userTask) {
+                WorkflowTaskDto dto = getWorkflowTaskDto(userTask, processVariables);
+
+                // 获取连线名称 (对应原 flowName)
+                if (StrUtil.contains(sf.getName(), BOHUI)) {
+                    dto.setTaskDirection("from");
+                    taskList.add(dto);
                 } else {
                     if (autoCalculate) {
-                        if (outgoingTransition.getId().equals(defaultFlowId)) {
-                            workflowTaskDto.setTaskDirection("to");
-                            defaultWorkflow = workflowTaskDto;
+                        if (sf.getId().equals(defaultFlowId)) {
+                            dto.setTaskDirection("to");
+                            defaultWorkflow = dto;
                         } else {
-                            Object conditionText = outgoingTransition.getProperty("conditionText");
-                            boolean condition = true;
-                            // 判断el表达式是否成立
-                            //写死判断不是flag的表达式则跳过
-                            if (conditionText != null && processVariables != null) {
-                                condition = false;
-                                if (isCondition(StrUtil.trim(conditionText.toString()), processVariables)) {
-                                    condition = true;
-                                }
-                            }
-                            if (condition) {
-                                workflowTaskDto.setTaskDirection("to");
-                                taskList.add(workflowTaskDto);
+                            // 获取 EL 表达式 (对应原 conditionText)
+                            String condition = sf.getConditionExpression();
+                            if (StrUtil.isEmpty(condition) || isCondition(condition, processVariables)) {
+                                dto.setTaskDirection("to");
+                                taskList.add(dto);
                             }
                         }
                     } else {
-                        workflowTaskDto.setTaskDirection("to");
-                        taskList.add(workflowTaskDto);
+                        dto.setTaskDirection("to");
+                        taskList.add(dto);
                     }
                 }
             }
-            // 如果是网关,再往下找一层(仅考虑为userTask的情况),并且默认为
-            else if ("parallelGateway".equals(destination.getProperty("type")) || "exclusiveGateway".equals(destination.getProperty("type"))) {
-                List<PvmTransition> outTransitionsTemp = destination.getOutgoingTransitions();
-                caculateLinkTask(outTransitionsTemp, taskList, processVariables, autoCalculate,
-                        (String) destination.getProperty("default"));
+            // 2. 处理网关递归 (ParallelGateway, ExclusiveGateway 等均继承自 Gateway)
+            else if (target instanceof Gateway gateway) {
+                caculateLinkTask(gateway.getOutgoingFlows(), taskList, processVariables, autoCalculate, gateway.getDefaultFlow());
             }
         }
+
+        // 3. 兜底处理默认连线
         if (autoCalculate && StringUtils.isNotEmpty(defaultFlowId) && defaultWorkflow != null) {
-            if (taskList.stream().noneMatch(t -> t.getTaskDirection().equals("to"))) {
+            if (taskList.stream().noneMatch(t -> "to".equals(t.getTaskDirection()))) {
                 taskList.add(defaultWorkflow);
             }
         }
@@ -1026,37 +1065,31 @@ public class WorkflowServiceImpl implements IWorkflowService {
     }
 
 
-    //计算关联节点
-    private void caculateLinkNode(List<PvmTransition> outgoingTransitions, List<RelatedNodeInfo> nodeList, Map<String
-                                          , Object> processVariables, boolean autoCalculate,
-                                  String defaultFlowId) {
-        RelatedNodeInfo defaultWorkflow = null;
-        // 找到当前节点关联的节点
-        for (PvmTransition outgoingTransition : outgoingTransitions) {
-            ActivityImpl destination = (ActivityImpl) outgoingTransition.getDestination();
-            if ("userTask".equals(destination.getProperty("type"))) {
-                TaskDefinition taskDefinition = (TaskDefinition) destination.getProperty("taskDefinition");
-                RelatedNodeInfo nodeInfo = getWorkflowNodeDto(taskDefinition, processVariables);
 
-                Object flowName = outgoingTransition.getProperty("name");
-                //简单定义驳回
-                if (flowName != null && flowName.toString().contains(BOHUI)) {
+    private void caculateLinkNode(List<SequenceFlow> outgoingFlows, List<RelatedNodeInfo> nodeList,
+                                  Map<String, Object> processVariables, boolean autoCalculate, String defaultFlowId) {
+        RelatedNodeInfo defaultWorkflow = null;
+
+        for (SequenceFlow sf : outgoingFlows) {
+            FlowElement target = sf.getTargetFlowElement();
+
+            // 1. 处理用户任务 (UserTask)
+            if (target instanceof UserTask userTask) {
+                // 这里的 getWorkflowNodeDto 需改为接收 UserTask 对象
+                RelatedNodeInfo nodeInfo = getWorkflowNodeDto(userTask, processVariables);
+
+                // 使用 sf.getName() 替代 getProperty("name")
+                if (StrUtil.contains(sf.getName(), BOHUI)) {
                     nodeInfo.setTaskDirection("from");
                     nodeList.add(nodeInfo);
                 } else {
                     if (autoCalculate) {
-                        if (outgoingTransition.getId().equals(defaultFlowId)) {
+                        if (sf.getId().equals(defaultFlowId)) {
                             nodeInfo.setTaskDirection("to");
                             defaultWorkflow = nodeInfo;
                         } else {
-                            Object conditionText = outgoingTransition.getProperty("conditionText");
-                            boolean condition = true;
-                            // 判断el表达式是否成立
-                            //写死判断不是flag的表达式则跳过
-                            if (conditionText != null && processVariables != null) {
-                                condition = isCondition(StrUtil.trim(conditionText.toString()), processVariables);
-                            }
-                            if (condition) {
+                            String condition = sf.getConditionExpression();
+                            if (StrUtil.isEmpty(condition) || isCondition(condition, processVariables)) {
                                 nodeInfo.setTaskDirection("to");
                                 nodeList.add(nodeInfo);
                             }
@@ -1067,38 +1100,31 @@ public class WorkflowServiceImpl implements IWorkflowService {
                     }
                 }
             }
-            // 如果是网关,再往下找一层(仅考虑为userTask的情况),并且默认为
-            else if ("parallelGateway".equals(destination.getProperty("type")) || "exclusiveGateway".equals(destination.getProperty("type"))) {
-                List<PvmTransition> outTransitionsTemp = destination.getOutgoingTransitions();
-                caculateLinkNode(outTransitionsTemp, nodeList, processVariables, autoCalculate,
-                        (String) destination.getProperty("default"));
+            // 2. 处理网关 (Gateway)
+            else if (target instanceof Gateway gateway) {
+                // 递归传入网关的出线和默认流 ID
+                caculateLinkNode(gateway.getOutgoingFlows(), nodeList, processVariables,
+                        autoCalculate, gateway.getDefaultFlow());
             }
-            //end event
-            else if ("endEvent".equals(destination.getProperty("type"))) {
+            // 3. 处理结束节点 (EndEvent)
+            else if (target instanceof EndEvent) {
                 RelatedNodeInfo endNode = new RelatedNodeInfo();
-                endNode.setNodeType(ActivitiConstants.NODE_TYPE_END_EVENT);
+                endNode.setNodeType("endEvent"); // 或使用你的常量
+
                 if (autoCalculate) {
-                    Object conditionText = outgoingTransition.getProperty("conditionText");
-                    boolean condition = true;
-                    // 判断el表达式是否成立
-                    //写死判断不是flag的表达式则跳过
-                    if (conditionText != null && processVariables != null) {
-                        condition = false;
-                        if (isCondition(StrUtil.trim(conditionText.toString()), processVariables)) {
-                            condition = true;
-                        }
-                    }
-                    if (condition) {
+                    String condition = sf.getConditionExpression();
+                    if (StrUtil.isEmpty(condition) || isCondition(condition, processVariables)) {
                         nodeList.add(endNode);
                     }
                 } else {
                     nodeList.add(endNode);
                 }
             }
-
         }
+
+        // 4. 兜底处理默认流
         if (autoCalculate && StringUtils.isNotEmpty(defaultFlowId) && defaultWorkflow != null) {
-            if (nodeList.stream().noneMatch(t -> t.getTaskDirection().equals("to"))) {
+            if (nodeList.stream().noneMatch(t -> "to".equals(t.getTaskDirection()))) {
                 nodeList.add(defaultWorkflow);
             }
         }
@@ -1127,7 +1153,7 @@ public class WorkflowServiceImpl implements IWorkflowService {
             variables.put(historicVariableInstance.getVariableName(), historicVariableInstance.getValue());
         }
         workflowTaskHistoryDto.setVariables(variables);
-        workflowTaskHistoryDto.setBeginTime(DateUtils.toLocalDateTime(query.getStartTime()));
+        workflowTaskHistoryDto.setBeginTime(DateUtils.toLocalDateTime(query.getClaimTime()));
         workflowTaskHistoryDto.setStopTime(DateUtils.toLocalDateTime(query.getEndTime()));
         return workflowTaskHistoryDto;
     }
@@ -1136,8 +1162,8 @@ public class WorkflowServiceImpl implements IWorkflowService {
     /**
      * 判断userTask是否有权限
      *
-     * @param task
-     * @return
+     * @param task 当前任务
+     * @return 是否具有权限
      */
     private boolean hasTaskPermission(Task task) {
         String checkAssignee = task.getAssignee();
@@ -1152,9 +1178,6 @@ public class WorkflowServiceImpl implements IWorkflowService {
 
     /**
      * 获取formKey补充角色或者人员
-     *
-     * @param formKey
-     * @return
      */
     private List<String> getFormKeyAssignee(String formKey) {
         List<String> assignee = new ArrayList<>();
@@ -1231,16 +1254,16 @@ public class WorkflowServiceImpl implements IWorkflowService {
             if (variables == null) {
                 variables = new HashMap<>();
             }
-            variables.put(ActivitiConstants.TITLE, workflowProcessDto.getTitle());
-            variables.put(ActivitiConstants.TYPE_NAME, workflowProcessDto.getTypeName());
-            variables.put(ActivitiConstants.BUSINESS_TYPE, workflowProcessDto.getType());
-            variables.put(ActivitiConstants.FILTER_STATION, workflowProcessDto.isFilterStation());
+            variables.put(FlowableConstants.TITLE, workflowProcessDto.getTitle());
+            variables.put(FlowableConstants.TYPE_NAME, workflowProcessDto.getTypeName());
+            variables.put(FlowableConstants.BUSINESS_TYPE, workflowProcessDto.getType());
+            variables.put(FlowableConstants.FILTER_STATION, workflowProcessDto.isFilterStation());
             //填充发起人
             if (StrUtil.isEmpty(workflowProcessDto.getStarter()) && LoginUserIdContextHolder.getUserId() != null) {
                 UserFullListDto currUser = userRpcService.getUserFullById(LoginUserIdContextHolder.getUserId());
-                variables.put(ActivitiConstants.STARTER, currUser.getName());
+                variables.put(FlowableConstants.STARTER, currUser.getName());
             } else {
-                variables.put(ActivitiConstants.STARTER, workflowProcessDto.getStarter());
+                variables.put(FlowableConstants.STARTER, workflowProcessDto.getStarter());
             }
 
             return runtimeService
@@ -1269,16 +1292,16 @@ public class WorkflowServiceImpl implements IWorkflowService {
         if (tasks != null && !tasks.isEmpty()) {
             Map<String, Object> variables = runtimeService.getVariables(processInstance.getId());
             tasks.forEach(p -> {
-                String title = variables.get(ActivitiConstants.TITLE).toString();
-                String typeName = variables.get(ActivitiConstants.TYPE_NAME).toString();
-                String type = ActivitiConstants.TYPE;
+                String title = variables.get(FlowableConstants.TITLE).toString();
+                String typeName = variables.get(FlowableConstants.TYPE_NAME).toString();
+                String type = FlowableConstants.TYPE;
                 String state = p.getName();
-                String businessType = variables.get(ActivitiConstants.BUSINESS_TYPE).toString();
-                boolean filterStation = (Boolean) variables.get(ActivitiConstants.FILTER_STATION);
+                String businessType = variables.get(FlowableConstants.BUSINESS_TYPE).toString();
+                boolean filterStation = (Boolean) variables.get(FlowableConstants.FILTER_STATION);
                 TaskFormKey taskFormKey = getTaskFormKey(p.getFormKey());
                 boolean addTodo = taskFormKey.getActiviti().getNotice().isAddTodo();
                 boolean appPush = taskFormKey.getActiviti().getNotice().isAppPush();
-                String starter = (String) variables.get(ActivitiConstants.STARTER);
+                String starter = (String) variables.get(FlowableConstants.STARTER);
                 String businessId = processInstance.getId() + "|" + p.getId();
                 ToDoTargetType toDoTargetType = ToDoTargetType.Role;
                 if (p.getAssigneeType().equals(AssigneeTypeEnum.UserId)) {
@@ -1336,62 +1359,72 @@ public class WorkflowServiceImpl implements IWorkflowService {
         try {
             return objectMapper.readValue(formKeyStr, TaskFormKey.class);
         } catch (Exception e) {
-            log.error("formKey配置有误！formKey=" + formKeyStr);
+            log.error("formKey配置有误！formKey={}", formKeyStr);
             return new TaskFormKey();
         }
     }
 
-    //跳转到指定的userTask节点
-    private void gotoAssignActivity(Task task, ActivityImpl currActivity, ActivityImpl gotoActivity, String message) {
-        //获取当前审批任务的出线
-        List<PvmTransition> currOutgoingTransitions = currActivity.getOutgoingTransitions();
-        List<PvmTransition> oldTransitions = new ArrayList<>(currOutgoingTransitions);
-        currOutgoingTransitions.clear();
 
-        TransitionImpl newTransition = currActivity.createOutgoingTransition();
-        newTransition.setDestination(gotoActivity);
+    /**
+     * 跳转到指定的userTask节点
+     * 模式转变：不再需要手动“清除出线 -> 创建临时出线 -> 恢复出线”这种 hack 操作。
+     * API 变更：使用 runtimeService.createChangeActivityStateBuilder()，这是 Flowable 7 处理“节点跳转”、“撤回”、“驳回”的标准方式。
+     * 安全性：原生 API 会自动处理任务的销毁、并发路径的清理以及历史日志的更新，避免了旧版本中由于手动操作出线导致的数据库状态不一致问题。
+     * 参数简化：不再需要 ActivityImpl 对象，只需传入节点的 ActivityId (即 BPMN 文件中的 ID 字符串) 即可。
+     */
+    private void gotoAssignActivity(Task task, String gotoActivityId, String message) {
+        // 1. 添加审批意见（如果需要）
+        if (StrUtil.isNotEmpty(message)) {
+            taskService.addComment(task.getId(), task.getProcessInstanceId(), message);
+        }
 
-        CompleteTaskInputDto dto = new CompleteTaskInputDto();
-        dto.setTaskId(task.getId());
-        dto.setProcessInstanceId(task.getProcessInstanceId());
-        dto.setComment(message);
-        completeTask(dto, false);
+        // 2. 执行跳转：通过当前节点 ID 直接跳转到目标节点 ID
+        runtimeService.createChangeActivityStateBuilder()
+                .processInstanceId(task.getProcessInstanceId())
+                .moveActivityIdTo(task.getTaskDefinitionKey(), gotoActivityId) // 从当前任务节点跳转到目标节点
+                .changeState();
 
-
-        //恢复原来的出线
-        currActivity.getOutgoingTransitions().remove(newTransition);
-        currOutgoingTransitions.addAll(oldTransitions);
+        // 注意：changeState() 会自动结束当前任务，不需要手动调用 completeTask
     }
 
-    private boolean checkProcessCanRecallPre(List<HistoricTaskInstance> historicTaskInstances, ProcessDefinitionEntity processDefinitionEntity, List<Task> userTasks) {
-        if (!historicTaskInstances.isEmpty()) {
-            //上一个流程实例
-            HistoricTaskInstance historicTaskInstance = historicTaskInstances.getFirst();
-            String nowUserId = LoginUserIdContextHolder.getUserId() == null ? "" : LoginUserIdContextHolder.getUserId().toString();
-            if (!historicTaskInstance.getAssignee().equals(nowUserId)) {
-                return false;
-            }
-            //上一个流程id描述
-            ActivityImpl activity = processDefinitionEntity.findActivity(historicTaskInstance.getTaskDefinitionKey());
-            //判断上一节点是会签则无法撤回
-            Object multiInstance = activity.getProperty("multiInstance");
-            if (multiInstance != null) {
-                return false;
-            }
-            if (userTasks.size() == 1) {
-                Task currTask = userTasks.getFirst();
-                TaskFormKey taskFormKey = getTaskFormKey(currTask.getFormKey());
-                if (!taskFormKey.getActiviti().isCallBackPre()) {
-                    return false;
-                }
-                //当前节点审批过，并且撤回的节点是自己则不允许撤回
-                return !currTask.getTaskDefinitionKey().equals(historicTaskInstance.getTaskDefinitionKey());
-            } else {
-                return false;
-            }
-        } else {
+    private boolean checkProcessCanRecallPre(List<HistoricTaskInstance> historicTaskInstances,
+                                             String processDefinitionId,
+                                             List<Task> userTasks) {
+        if (historicTaskInstances.isEmpty()) return false;
+
+        // 1. 获取上一个任务实例及当前用户校验
+        HistoricTaskInstance lastTask = historicTaskInstances.getFirst();
+        String nowUserId = String.valueOf(LoginUserIdContextHolder.getUserId());
+        if (!lastTask.getAssignee().equals(nowUserId)) {
             return false;
         }
+
+        // 2. 通过 BpmnModel 获取节点定义
+        BpmnModel bpmnModel = repositoryService.getBpmnModel(processDefinitionId);
+        FlowElement flowElement = bpmnModel.getFlowElement(lastTask.getTaskDefinitionKey());
+
+        // 3. 判断是否为会签节点 (MultiInstance)
+        if (flowElement instanceof UserTask lastUserTask) {
+            if (lastUserTask.getLoopCharacteristics() != null) {
+                return false; // 存在多实例循环特性即为会签
+            }
+        }
+
+        // 4. 当前任务状态校验
+        if (userTasks.size() == 1) {
+            Task currTask = userTasks.getFirst();
+
+            // 5. 校验 FormKey 中的自定义撤回标记 (保持你原有的 getTaskFormKey 逻辑)
+            TaskFormKey taskFormKey = getTaskFormKey(currTask.getFormKey());
+            if (taskFormKey == null || !taskFormKey.getActiviti().isCallBackPre()) {
+                return false;
+            }
+
+            // 6. 禁止撤回到自身
+            return !currTask.getTaskDefinitionKey().equals(lastTask.getTaskDefinitionKey());
+        }
+
+        return false;
     }
 
     private List<HistoricTaskInstance> getHistoricTaskInstanceDesc(String processInstanceId) {
